# mdither_console

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: analyze_telemetry.py
src/motioncon/: __init__.py  app.py  config.py
src/motioncon/control/: __init__.py  flick.py  gestures.py
src/motioncon/render/: __init__.py  dither.py  dots.py
src/motioncon/telemetry/: __init__.py  logger.py
src/motioncon/ui/: __init__.py  menu.py
src/motioncon/vision/: __init__.py  camera.py  difference.py  flow.py  motion.py
tests/: test_config.py  test_difference.py  test_dither.py  test_dots.py  test_flick.py  test_flow.py  test_gestures.py  test_logger.py  test_menu.py  test_motion.py
tools/: eval_detector.py  record_clips.py
