[project]
name = "motion-console"
version = "0.1.0"
description = "Real-time motion-controlled interface: frame differencing rendered as dither dots, navigated by hand movement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
]

[project.scripts]
motioncon = "motioncon.app:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motioncon"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "N",   # pep8-naming
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
